DTSPB-2209 Integrate Fortify with Jenkins (#600)